<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PiPPlware</string>
    <string name="title_section1">Keyboard</string>
    <string name="title_section2">Stats</string>
    <string name="title_section3">Torrents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="server_find_area">Detalhes do servidor</string>
    <string name="server_find_manual_ip_label">IP manual</string>
    <string name="server_find_bonjour">Bonjour</string>
    <string name="title_activity_server_find">ServerFind</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_find_manual_button_text">Ligar-se</string>
    <string name="server_find_manual_port_separator">:</string>
    <string name="reboot_rpi">Reboot</string>
    <string name="boot_to_emulation_failover_xbmc">Default to ES (failover XBMC)</string>
    <string name="boot_to_emulation_center">Default to Emulation Server</string>
    <string name="boot_to_xbmc">Default to Kodi</string>
    <string name="boot_to_xfce">Default to XFCE</string>
    <string name="terminal">Default to Terminal</string>
    <string name="server_find_manual_ip_title">IP Address</string>
    <string name="server_find_manual_server">Manual IP Address</string>

    <string-array name="keyboards_list">
        <item>Gamepad</item>
        <item>Keyboard</item>
    </string-array>
    <string-array name="command_list">
        <item>@string/reboot_rpi</item>
        <item>@string/boot_to_emulation_failover_xbmc</item>
        <item>@string/boot_to_emulation_center</item>
        <item>@string/boot_to_xbmc</item>
        <item>@string/boot_to_xfce</item>
        <item>@string/terminal</item>
    </string-array>

    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="command_execute">Executar</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="could_not_connect_server">Can\'t find the server</string>
    <string name="title_section4">Credits</string>
    <string name="kill_button">Kill</string>
    <string name="process_pid">PID</string>
    <string name="process_memory">RAM</string>
    <string name="process_name">Name</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="server_password">Password:</string>
    <string name="autologin">Autologin</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="ic_action_socket_connection">Websocket</string>
    <string name="logout">Logout</string>

    <string name="title_activity_input_container">InputContainerActivity</string>
    <string name="buttonA">A</string>
    <string name="buttonB">B</string>
    <string name="buttonC">C</string>
    <string name="buttonD">D</string>
    <string name="buttonE">E</string>
    <string name="buttonF">F</string>
    <string name="buttonStart">Start</string>
    <string name="buttonSelect">Select</string>
    <string name="buttonUp">UP</string>
    <string name="buttonDown">DOWN</string>
    <string name="buttonRight">RIGHT</string>
    <string name="buttonLeft">LEFT</string>

</resources>
